# tiles

./: .bazelrc  .clang-tidy  .gitignore  BUILD.bazel  MODULE.bazel  README.md
libhello/: hello.cpp  hello.h  hello_benchmark.cpp  hello_test.cpp
metrika/: constants.h  metrika.cpp  metrika.h  page_handle.cpp  page_handle.h  page_handler.h  statistics.cpp  statistics.h  strategy.cpp  strategy.h
py_utils/: converter.py  tile_stats.py
tools/: BUILD.bazel  comp_metrics.cpp  say_hello.cpp
