load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "metrika",
    srcs = [
        "metrika/metrika.cpp",
        "metrika/page_handle.cpp",
        "metrika/statistics.cpp",
        "metrika/strategy.cpp"
    ],
    hdrs = [
        "metrika/metrika.h",
        "metrika/page_handle.h",
        "metrika/statistics.h",
        "metrika/strategy.h"
    ],
    copts = ["-std=c++23"],
    deps = ["@libtiles//:tileindex"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "clang_format_config",
    srcs = [".clang-format"],
    visibility = ["//:__subpackages__"],
)

filegroup(
    name = "clang_tidy_config",
    srcs = [".clang-tidy"],
    visibility = ["//:__subpackages__"],
)