load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "metrika",
    srcs = [
        "metrika/metrika.cpp",
        "metrika/strategy.cpp",
        "metrika/page_handle.cpp",
        "metrika/statistics.cpp"
    ],
    hdrs = [
        "metrika/metrika.h",
        "metrika/strategy.h",
        "metrika/page_handle.h",
        "metrika/statistics.h"
    ],
    copts = ["-std=c++20", "-O3"],
    deps = ["@libtiles//:tileindex"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "clang_format_config",
    srcs = [".clang-format"],
    visibility = ["//:__subpackages__"],
)

filegroup(
    name = "clang_tidy_config",
    srcs = [".clang-tidy"],
    visibility = ["//:__subpackages__"],
)