"""
bazel project template
"""

module(name = "tiles", version = "0.0.1")

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "google_benchmark", version = "1.9.4", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.17.0.bcr.1", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.2.13")

################################################################################
# toolchains
################################################################################

# https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
bazel_dep(name = "toolchains_llvm", version = "1.5.0", dev_dependency = True)
# llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
# llvm.toolchain(llvm_version = "18.1.8")
# use_repo(llvm, "llvm_toolchain")
# register_toolchains("@llvm_toolchain//:all", dev_dependency = True)

bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.1", dev_dependency = True)
toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains", dev_dependency = True)
use_repo(toolchains, "zig_sdk")
register_toolchains("@zig_sdk//toolchain:linux_amd64_musl", dev_dependency = True)

bazel_dep(name = "tcmalloc", version = "0.0.0-20250927-12f2552", dev_dependency = True)
bazel_dep(name = "libpfm", version = "4.11.0.bcr.1", dev_dependency = True)

################################################################################
# development tools
################################################################################

# bazel build --config=clang-tidy -k //...
bazel_dep(name = "bazel_clang_tidy", dev_dependency = True)
archive_override(
    module_name = "bazel_clang_tidy",
    integrity = "sha256-I/sLN+QpoQYTn8odPPkNe5L5xZUztq2S66aEH3APglc=",
    strip_prefix = "bazel_clang_tidy-496018e020cf0a7d813a2b5a9d246ec55340a7ed",
    urls = ["https://github.com/erenon/bazel_clang_tidy/archive/496018e020cf0a7d813a2b5a9d246ec55340a7ed.zip"],
)

# bazel build --config=clang-format -k //...
bazel_dep(name = "bazel_clang_format", dev_dependency = True)
archive_override(
    module_name = "bazel_clang_format",
    integrity = "sha256-SPtbXGA09Rqpe4dQF9zNiJPhzwKmcniYlWaQU+r/wCo=",
    strip_prefix = "bazel_clang_format-af6c342dc592ad4f1af76d0260aac90d5c9b426f",
    urls = ["https://github.com/oliverlee/bazel_clang_format/archive/af6c342dc592ad4f1af76d0260aac90d5c9b426f.zip"],
)

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
git_repository(
    name = "libtiles",
    remote = "https://github.com/eak1mov/libtiles.git"
)