load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "say_hello",
    srcs = ["say_hello.cpp"],
    copts = ["-std=c++20"],
    linkstatic = 1,
    deps = [
        "//:libhello",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/log:flags",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/log:log",
    ],
)
