load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "comp_metrics",
    srcs = ["comp_metrics.cpp"],
    copts = ["-std=c++20"],
    linkstatic = 1,
    deps = [
        "//:metrika",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/log:flags",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/log:log",
        "@libtiles//:libtiles",
    ], 
)